--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,44 @@
   text-decoration: none;
 }
 
+/* Tyylit valintalaatikolle */
+#players-container {
+  display: flex; /* Käytä Flexboxia */
+  flex-direction: column; /* Aseta sarakkeiden suunta */
+  align-items: center; /* Keskitä sisältö vaakasuunnassa */
+}
+#players-selection-container {
+  background-color: rgb(34, 34, 34); /* Aseta taustaväri diville */
+  padding: 10px; /* Aseta haluamasi sisennys */
+  margin-bottom: 10px; /* Lisää tarvittava marginaali */
+}
+.player-option {
+  display: flex; /* Käytä Flexboxia pelaajien nimien sisältämiseen */
+  align-items: flex-start; /* Kohdista pelaajan nimi ja checkbox vasempaan laitaan pystysuunnassa */
+  margin-bottom: 20px; /* Lisää marginaalia alapuolelle */
+  cursor: pointer; /* Osoita, että pelaajan nimi on valittavissa */
+  font-size: 20px;
+  color: rgb(216, 216, 216);
+}
+
+.player-option input[type="checkbox"] {
+  margin-right: 10px; /* Lisää hieman välistystä checkboxin ja pelaajan nimen välille */
+}
+
+.player-option.selected {
+  background-color: lightblue; /* Korosta valittu pelaaja */
+}
+
+.selPlayersHead {
+  display: flex !important; /* Muuta painike lohkoksi */
+  justify-content: center !important;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 20px;
+  font-weight: 300;
+  color: #f5f5f5;
+}
+
 .head,
 .addplayercontent {
   font-family: "DM Sans", sans-serif;
@@ -75,13 +113,12 @@ nav ul li a:hover {
   color: rgb(36, 175, 255);
 }
 
-.content,
-.contentForPlayerSel {
+.content {
   display: flex;
   justify-content: center;
   padding: 20px;
-  color: #edf0f1;
-  font-size: clamp(0.75rem, 1.5vw, 2rem);
+  color: #f5f5f5;
+  font-size: 20px;
 }
 
 /* Navigation */
