--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,47 @@
   font-size: 20px;
   background-color: rgb(34, 34, 34);
 }
+
+#players-selection-container {
+  text-align: center;
+  padding: 20px;
+  background-color: rgb(34, 34, 34);
+  margin-bottom: auto; /* Lisää välistystä alapuolelle */
+  padding-bottom: 40px;
+}
+
+.selPlayersHead {
+  margin-bottom: 10px; /* Lisää välistystä alapuolelle */
+  color: #f5f5f5;
+}
+
+/* Keskitä pelaajalista */
+#players-container {
+  display: flex;
+  flex-direction: column; /* Aseta elementit sarakkeiksi */
+  text-align: left;
+  margin-left: 175px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  color: #f5f5f5;
+  font-size: 20px;
+  max-width: 175px;
+}
+
+.player-option {
+  margin-bottom: 20px; /* Lisää väli pelaajien välille */
+}
+
+/* Aseta aloita kierros -painike keskelle */
+.startRoundButton {
+  padding-top: 20px;
+  background-color: rgb(24, 24, 24);
+  width: 100vw !important; /* Koko sivun leveys */
+  padding-bottom: 20px;
+}
+#start-btn {
+  margin-left: 20px;
+}
 .dropdownclass {
   background-color: rgb(34, 34, 34);
   padding-bottom: 50px;
@@ -21,6 +62,9 @@
 
 .player-option {
   cursor: pointer; /* Osoita, että pelaajan nimi on valittavissa */
+  background-color: rgb(41, 41, 41); /* Korosta valittu pelaaja */
+  height: 40px;
+  padding-top: 8px;
 }
 
 .player-option.selected {
@@ -179,20 +223,27 @@ nav ul li a:hover {
   padding-bottom: 10px;
   padding-top: 10px;
 }
-.startRoundButton {
-  align-items: center;
-  margin: 0 auto;
-  padding-bottom: 20px;
-
-  width: 320px;
-}
 
 .startRoundButton button {
   height: 30px;
   font-size: 16px;
+  text-align: left;
 }
 
 @media all and (min-width: 368px) {
+  .content {
+    font-size: 16px;
+  }
+
+  #players-selection-container {
+    text-align: center;
+  }
+
+  #players-container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 320px;
+  }
   .nav__links {
     justify-content: center;
   }
@@ -215,6 +266,24 @@ nav ul li a:hover {
 }
 
 @media all and (min-width: 768px) {
+  .content {
+    padding: 20px 10px;
+  }
+
+  #players-selection-container {
+    padding: 20px 10px;
+  }
+
+  #players-container {
+    margin-left: 0;
+    max-width: none;
+  }
+
+  .startRoundButton,
+  .dropdownclass {
+    width: 100%;
+    margin: 0;
+  }
   .item {
     display: block;
     width: auto;
