--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Common styles */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,19 +18,18 @@
   text-align: center;
   padding: 20px;
   background-color: rgb(34, 34, 34);
-  margin-bottom: auto; /* Lisää välistystä alapuolelle */
+  margin-bottom: auto;
   padding-bottom: 40px;
 }
 
 .selPlayersHead {
-  margin-bottom: 10px; /* Lisää välistystä alapuolelle */
+  margin-bottom: 10px;
   color: #f5f5f5;
 }
 
-/* Keskitä pelaajalista */
 #players-container {
   display: flex;
-  flex-direction: column; /* Aseta elementit sarakkeiksi */
+  flex-direction: column;
   text-align: left;
   margin-left: 175px;
   padding-bottom: 20px;
@@ -42,14 +40,13 @@
 }
 
 .player-option {
-  margin-bottom: 20px; /* Lisää väli pelaajien välille */
+  margin-bottom: 20px;
 }
 
-/* Aseta aloita kierros -painike keskelle */
 .startRoundButton {
   padding-top: 20px;
   background-color: rgb(24, 24, 24);
-  width: 100vw !important; /* Koko sivun leveys */
+  width: 100vw !important;
   padding-bottom: 20px;
 }
 #start-btn {
@@ -61,14 +58,14 @@
 }
 
 .player-option {
-  cursor: pointer; /* Osoita, että pelaajan nimi on valittavissa */
-  background-color: rgb(41, 41, 41); /* Korosta valittu pelaaja */
+  cursor: pointer;
+  background-color: rgb(41, 41, 41);
   height: 40px;
   padding-top: 8px;
 }
 
 .player-option.selected {
-  background-color: rgb(33, 138, 173); /* Korosta valittu pelaaja */
+  background-color: rgb(33, 138, 173);
 }
 
 .head,
