--- a/stylesforendround.css
+++ b/stylesforendround.css
@@ -32,20 +32,20 @@ td {
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Varmistetaan, että säiliö täyttää vähintään näyttökorkeuden */
+  min-height: 100vh;
 }
 
 .table-wrapper {
-  overflow-x: auto; /* Lisätään vaaka vieritys tarvittaessa */
+  overflow-x: auto;
   background-color: rgb(24, 24, 24);
 }
 
 .nav {
-  position: sticky; /* Kiinnitä navigointi yläreunaan */
-  top: 0; /* Yläreunaan kiinnitetyn elementin sijainti */
-  width: 100%; /* Täysin leveys */
-  background-color: rgb(24, 24, 24); /* Taustaväri */
-  z-index: 1; /* Aseta etualalle, jotta se ei mene muiden elementtien taakse */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: rgb(24, 24, 24);
+  z-index: 1;
 }
 nav {
   background-color: rgb(24, 24, 24);
@@ -53,37 +53,37 @@ nav {
 }
 
 .scoreText {
-  position: sticky; /* Kiinnitä pisteteksti yläreunaan */
-  top: 0; /* Yläreunaan kiinnitetyn elementin sijainti */
-  width: 100%; /* Täysin leveys */
-  background-color: rgb(24, 24, 24); /* Taustaväri */
-  z-index: 1; /* Aseta etualalle, jotta se ei mene muiden elementtien taakse */
-  font-size: clamp(10px, 3vw, 16px); /* Muuta pistetekstin kokoa dynaamisesti */
-  text-align: center; /* Keskitä teksti */
-  padding: 10px 0; /* Lisää ylimääräistä tilaa ylä- ja alapuolelle */
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: rgb(24, 24, 24);
+  z-index: 1;
+  font-size: clamp(10px, 3vw, 16px);
+  text-align: center;
+  padding: 10px 0;
 }
 
 /* CSS for player score display */
 .player-score {
-  background-color: rgb(25, 25, 25); /* Taustaväri */
-  color: rgb(215, 215, 215); /* Tekstin väri */
+  background-color: rgb(25, 25, 25);
+  color: rgb(215, 215, 215);
   padding: 10px;
   margin-bottom: 5px;
   display: flex;
   justify-content: space-between;
 }
 .endRoundScores {
-  background-color: rgb(25, 25, 25); /* Taustaväri */
-  color: rgb(215, 215, 215); /* Tekstin väri */
+  background-color: rgb(25, 25, 25);
+  color: rgb(215, 215, 215);
   padding-bottom: 20px;
 }
 
 .player-name {
-  margin-right: auto; /* Aseta nimi ruudun vasempaan laitaan */
+  margin-right: auto;
 }
 
 .score {
-  margin-left: auto; /* Aseta pisteet ruudun oikeaan laitaan */
+  margin-left: auto;
 }
 
 .scoreText h1 {
@@ -121,7 +121,7 @@ nav ul li a {
 }
 
 nav ul li a.active {
-  color: rgb(13, 151, 214); /* change color when active*/
+  color: rgb(13, 151, 214);
 }
 nav ul li a:hover {
   color: rgb(36, 175, 255);
@@ -217,10 +217,10 @@ nav ul li a:hover {
     width: auto;
   }
   .toggle {
-    display: block; /* Näytä hampurilaisvalikko pienillä näytön leveyksillä */
-    order: 4; /* Aseta järjestys, jotta se sijoittuu oikealle */
-    margin-left: auto; /* Aseta marginaali automaattisesti vasemmalle, jotta se pysyy oikealla */
-    margin-right: 20px; /* Lisää hieman marginaalia oikealle, jotta se ei ole liian lähellä reunaa */
+    display: block;
+    order: 4;
+    margin-left: auto;
+    margin-right: 20px;
   }
   .head {
     order: 0;
@@ -240,10 +240,10 @@ nav ul li a:hover {
 table {
   border-collapse: collapse;
   width: 100%;
-  max-width: 100%; /* Limit maximum width to 100% */
+  max-width: 100%;
   margin-bottom: 20px;
   margin-top: 20px;
-  overflow-x: auto; /* Enable horizontal scrolling if needed */
+  overflow-x: auto;
 }
 
 th,
@@ -251,30 +251,26 @@ td {
   border: 2px solid #252525;
   text-align: center;
   padding: 8px;
-  font-size: clamp(
-    0.75rem,
-    1.5vw,
-    2rem
-  ); /* Dynamic font-size based on viewport width */
-  white-space: nowrap; /* Prevent wrapping of content */
+  font-size: clamp(0.75rem, 1.5vw, 2rem);
+  white-space: nowrap;
 }
 
 /* Styles for responsive design */
 @media screen and (max-width: 600px) {
   th,
   td {
-    font-size: 8px; /* Decrease font size for smaller screens */
-    padding: 3px; /* Adjust padding for smaller screens */
+    font-size: 8px;
+    padding: 3px;
     font-size: clamp(0.75rem, 1.5vw, 2rem);
-    white-space: normal; /* Allow wrapping of content */
+    white-space: normal;
   }
 }
 
 @media screen and (max-width: 400px) {
   th,
   td {
-    font-size: 6px; /* Further decrease font size for smaller screens */
-    padding: 1px; /* Further adjust padding for smaller screens */
+    font-size: 6px;
+    padding: 1px;
     font-size: clamp(0.75rem, 1.5vw, 2rem);
   }
 }
